# simplecgen

./: .gitignore  .gitmodules  .travis-before_install.sh  .travis.yml  README  README.md  index.html  page2.html  simplecgen.conf  sub-menu.html
infiles/: index.sct  page2.sct  sub-menu.sct
src/: CMakeLists.txt  Makefile.am  Makefile.in  configure  configure.ac  simplecgen.c  simplecgen.h  utils.c  utils.h
templates/: _sub_menu.html  default.html  head.html
