AC_INIT([simplecgen],
        [0.1.02-dev],
        [andy400-dev@yahoo.com],
        ,
        [https://github.com/theimpossibleastronaut/simplecgen])
AM_INIT_AUTOMAKE
AC_PREREQ(2.69)
AC_CONFIG_HEADERS([./config.h:./config.in])
AC_PROG_CC
AC_PROG_INSTALL

AM_MAINTAINER_MODE

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
